force-app/main/default/objects/Episodic_Event__c/Episodic_Event__c.object-meta.xml
<CustomObject>
    <description>Tracking object for changes and incidents related to customers.</description>
    <label>Customer Impact Event</label>
    <nameField>
        <label>Episodic Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Impact Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>