force-app/main/default/objects/Episodic_Event__c/fields/Business_Line_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Business_Line_Impacted__c</fullName>
    <label>Business Line Impacted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Records Management</fullName>
            </value>
            <value>
                <fullName>Data Backup and Recovery</fullName>
            </value>
            <value>
                <fullName>Document Management Solutions</fullName>
            </value>
            <value>
                <fullName>Secure Shredding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>