force-app/main/default/objects/Episodic_Event__c/fields/Change_or_Incident__c.field-meta.xml
<CustomField>
    <fullName>Change_or_Incident__c</fullName>
    <label>Change or Incident?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>