force-app/main/default/objects/Episodic_Event__c/fields/Change_or_Incident_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Change_or_Incident_Subtype__c</fullName>
    <label>Change or Incident Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Change_or_Incident__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
            <value>
                <fullName>Weather</fullName>
            </value>
            <value>
                <fullName>Inventory Reconciliation (lost asset)</fullName>
            </value>
            <value>
                <fullName>Inadvertent Destruction</fullName>
            </value>
            <value>
                <fullName>Misdelivery</fullName>
            </value>
            <value>
                <fullName>Unsecured Assets</fullName>
            </value>
            <value>
                <fullName>False Record</fullName>
            </value>
            <value>
                <fullName>Damaged Customer Assets</fullName>
            </value>
            <value>
                <fullName>Compromised Customer Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>