force-app/main/default/objects/Episodic_Event__c/fields/Customer_Event_Count__c.field-meta.xml
<CustomField>
    <fullName>Customer_Event_Count__c</fullName>
    <label>Customer Event Count</label>
    <summaryForeignKey>Customer_Event__c.Episodic_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>