force-app/main/default/objects/Episodic_Event__c/fields/Impact_Date__c.field-meta.xml
<CustomField>
    <fullName>Impact_Date__c</fullName>
    <label>Impact Date</label>
    <type>Date</type>
</CustomField>