force-app/main/default/objects/Episodic_Event__c/fields/Impacted_Prior_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Prior_Year_Revenue__c</fullName>
    <label>Impacted Prior Year Revenue</label>
    <summarizedField>Customer_Event__c.Prior_Year_Total_Revenue_WF__c</summarizedField>
    <summaryForeignKey>Customer_Event__c.Episodic_Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>