force-app/main/default/objects/Episodic_Event__c/fields/Occurred_in_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Occurred_in_Last_12_Months__c</fullName>
    <formula>IF( Impact_Date__c  &gt;= (TODAY() - 365), &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occurred in Last 12 Months</label>
    <type>Text</type>
</CustomField>